// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer renders default drawer 1`] = `
<DrawerContainer
  className=""
>
  <DrawerContent>
    <Gradient
      className="gradient--spotlight"
      style={
        Object {
          "height": "60px",
          "position": "relative",
        }
      }
    >
      <HeaderContent>
        <div />
        <CloseButton
          type="button"
        >
          <span
            className="hamburger hamburger--closed kQQPwz"
          >
            <span
              className="ggAQg"
            />
          </span>
        </CloseButton>
      </HeaderContent>
    </Gradient>
  </DrawerContent>
</DrawerContainer>
`;

exports[`Drawer renders header elements 1`] = `
<DrawerContainer
  className=""
>
  <DrawerContent>
    <Gradient
      className="gradient--spotlight"
      style={
        Object {
          "height": "60px",
          "position": "relative",
        }
      }
    >
      <HeaderContent>
        <div>
          <span>
            Some Title Element
          </span>
        </div>
        <CloseButton
          type="button"
        >
          <span
            className="hamburger hamburger--closed kQQPwz"
          >
            <span
              className="ggAQg"
            />
          </span>
        </CloseButton>
      </HeaderContent>
    </Gradient>
    <span>
      Content
    </span>
  </DrawerContent>
</DrawerContainer>
`;

exports[`Drawer renders multiple child elements 1`] = `
<DrawerContainer
  className=""
>
  <DrawerContent>
    <Gradient
      className="gradient--spotlight"
      style={
        Object {
          "height": "60px",
          "position": "relative",
        }
      }
    >
      <HeaderContent>
        <div />
        <CloseButton
          type="button"
        >
          <span
            className="hamburger hamburger--closed kQQPwz"
          >
            <span
              className="ggAQg"
            />
          </span>
        </CloseButton>
      </HeaderContent>
    </Gradient>
    <span>
      Content
    </span>
    <span>
      Content
    </span>
    <span>
      Content
    </span>
  </DrawerContent>
</DrawerContainer>
`;

exports[`Drawer renders string header header 1`] = `
<DrawerContainer
  className=""
>
  <DrawerContent>
    <Gradient
      className="gradient--spotlight"
      style={
        Object {
          "height": "60px",
          "position": "relative",
        }
      }
    >
      <HeaderContent>
        <div>
          <div
            className="text text--light text--primary jYWnxl"
            disabled={false}
            size="kilo"
          >
            Some Title
          </div>
        </div>
        <CloseButton
          type="button"
        >
          <span
            className="hamburger hamburger--closed kQQPwz"
          >
            <span
              className="ggAQg"
            />
          </span>
        </CloseButton>
      </HeaderContent>
    </Gradient>
    Content
  </DrawerContent>
</DrawerContainer>
`;
